test github action

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,15 +10,27 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  run-tests:
 
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
         node-version: [16.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_USER: lucid
+          POSTGRES_PASSWORD: 123
+          POSTGRES_DB: lucid
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+      
     steps:
     - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
@@ -28,4 +40,18 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: node ace build --production
-    - run: node ace test
+
+    - name: Setting up env and run tests
+      run: node ace test
+      env:
+        PORT: 3333
+        HOST: 0.0.0.0
+        NODE_ENV: development
+        APP_KEY: l1276y9cGB_tV3OuHR0aMwAIgYq7Ffns
+        DRIVE_DISK: local
+        DB_CONNECTION: pg
+        PG_HOST: localhost
+        PG_PORT: 5432
+        PG_USER: lucid
+        PG_PASSWORD: 123
+        PG_DB_NAME: lucid
