--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -42,16 +42,6 @@ jobs:
     - run: node ace build --production
 
     - name: Setting up env and run tests
+      run: |
+          echo "${{ secrets.ENV_FILE }}" > .env
       run: node ace test
-      env:
-        PORT: 3333
-        HOST: 0.0.0.0
-        NODE_ENV: development
-        APP_KEY: l1276y9cGB_tV3OuHR0aMwAIgYq7Ffns
-        DRIVE_DISK: local
-        DB_CONNECTION: pg
-        PG_HOST: localhost
-        PG_PORT: 5432
-        PG_USER: lucid
-        PG_PASSWORD: 123
-        PG_DB_NAME: lucid
