--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -50,6 +50,7 @@ jobs:
     - run: node ace test
   
   push_to_registry:
+    needs: run-tests
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     
