--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   postgres:
-    container_name: postgres
+    container_name: intellisense-devicenet-postgres
     image: postgres:14-alpine
     volumes:
       - postgres_volume:/var/lib/postgresql/data
