--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@adonisjs/assembler": "^5.9.5",
     "@japa/preset-adonis": "^1.2.0",
     "@japa/runner": "^2.5.1",
+    "@types/got": "^9.6.12",
     "@types/proxy-addr": "^2.0.0",
     "@types/source-map-support": "^0.5.6",
     "adonis-preset-ts": "^2.1.0",
@@ -65,6 +66,8 @@
     "@adonisjs/repl": "^3.1.11",
     "@influxdata/influxdb-client": "^1.33.2",
     "@influxdata/influxdb-client-apis": "^1.33.2",
+    "@paralleldrive/cuid2": "^2.2.2",
+    "got": "^13.0.0",
     "luxon": "^3.3.0",
     "mqtt": "^4.3.7",
     "mqtt-pattern": "^2.0.1",
